--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "advent-of-code-2022",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "prettier": "^2.8.0"
+  },
+  "scripts": {
+    "test": "mocha src --watch --require setupTests.js"
+  }
 }
