--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "chai": "^4.3.7",
+    "eslint": "^8.28.0",
     "mocha": "^10.1.0",
     "prettier": "^2.8.0"
   },
