--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "test": "mocha src --watch --require setupTests.js",
+    "testday": "mocha src --watch --require setupTests.js --grep",
     "solve": "node scripts/solve.js",
     "generate": "node scripts/generate.js"
   }
